--- a/InfiniteTiers.DevicesStore.Presentation/Views/TransactionsHistory/History.cshtml
+++ b/InfiniteTiers.DevicesStore.Presentation/Views/TransactionsHistory/History.cshtml
@@ -39,6 +39,10 @@
         }
     </tbody>
 </table>
+@if (Model.Count() < 1)
+{
+    <h4 class="text-center text-danger">No Transactions.</h4>
+}
 <style>
     td, th {
         text-align: center;
