--- a/InfiniteTiers.DevicesStore.Presentation/Views/Home/Index.cshtml
+++ b/InfiniteTiers.DevicesStore.Presentation/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
+<div class="jumbotron text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <p class="lead">This is simple device store for tracking transactions between employees.</p>
 </div>
